Fix padding on course about image on small devices

--- a/static/less/pages/course/about.less
+++ b/static/less/pages/course/about.less
@@ -33,6 +33,10 @@ section.course-info {
                     padding: 15px 15px 15px 0;
                     display: block;
 
+                    @media (max-width: @screen-sm-max) {
+                        padding: 15px;
+                    }
+
                     .hero {
                         .square(auto);
 
